Added ResolvedIssues
